<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/gross_income_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint ="Gross (pre-tax) Income"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tax_rate_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What is the tax rate you pay monthly?"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gross_income_edit_text"/>

        <RadioGroup
            android:id="@+id/rate_option_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tax_rate_text_view">

            <RadioButton
                android:id="@+id/twenty_percent_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#DA1C1C"
                android:text="@string/high_20"/>

            <RadioButton
                android:id="@+id/eighteen_percent_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#E1D037"
                android:layout_marginStart="6dp"
                android:text="@string/normal_18"/>

            <RadioButton
                android:id="@+id/twelve_percent_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#1C9EDA"
                android:layout_marginStart="6dp"
                android:text="Lower (%12)"/>

        </RadioGroup>


    <TextView
        android:id="@+id/marital_status_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_married"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_option_radio_group"/>

    <RadioGroup
        android:id="@+id/marital_status_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/married_radio_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marital_status_text_view"
        >

        <RadioButton
            android:id="@+id/married_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#DA1C1C"
            android:text="@string/yes"/>

        <RadioButton
            android:id="@+id/single_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#E1D037"
            android:layout_marginStart="6dp"
            android:text="No"/>

    </RadioGroup>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/rounded_number_up_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/rounding_up"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/marital_status_radio_group"/>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rounded_number_up_switch"/>

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax_20"
        android:textSize="22sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_button"/>







</androidx.constraintlayout.widget.ConstraintLayout>